--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,18 @@
     <string name="content_authority">za.co.mikhails.nanodegree.popularmovies.app</string>
     <string name="content_authority_trailers">za.co.mikhails.nanodegree.popularmovies.app.trailers</string>
     <string name="content_authority_reviews">za.co.mikhails.nanodegree.popularmovies.app.reviews</string>
+    <string name="content_authority_favorites">za.co.mikhails.nanodegree.popularmovies.app.favorites</string>
 
     <string name="unknown_release_date">Unknown</string>
     <string name="unknown_vote_average">Unknown</string>
 
     <string name="action_sort_by_popular">Most popular</string>
     <string name="action_sort_by_rating">Highest-rated</string>
+    <string name="action_show_favorites">Favorites</string>
+    <string name="action_add_to_favorites">Add to Favorites</string>
+    <string name="action_share_trailer">Share first trailer</string>
+
+    <string name="toast_add_to_favorites">Added \"{0}\" to favorites.</string>
 
     <string name="action_about">About</string>
     <string name="about_text">Created by Mikhail Sukharuchkin sukharuchkinm@gmail.com</string>
